--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   db:
-    image: postgres
+    image: postgres:11
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
