--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Brendan Welzien <brendanwelzien@gmail.com>"]
 python = "^3.9"
 Django = "^3.1.4"
 djangorestframework = "^3.12.2"
+psycopg2-binary = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
