--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,10 @@
 version: "3.9"
 
 services:
-  db:
-    image: postgres:11
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn cars_project.wsgi:application --bind 0.0.0.0:8000 --workers 4 #python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
       - "8000:8000"
-    depends_on:
-      - db
