--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.9"
 Django = "^3.1.4"
 djangorestframework = "^3.12.2"
 psycopg2-binary = "^2.8.6"
+djangorestframework-simplejwt = "^4.6.0"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
